@@ -7,6 +7,7 @@
         - Large buffer support
         - Final Cartridge 3 freezed file fastloader support
         - D71/D81 disk image support
+        - parse FSINFO sector for faster FAT32 free space calculation
 
 2008-07-09 - release 0.7.3
         - Bugfix: Free buffers on error in M2I and D64
